CMAKE_MINIMUM_REQUIRED (VERSION 3.14)
PROJECT (MWE_VULKAN)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FIND_PACKAGE(Vulkan REQUIRED)
IF(Vulkan_FOUND)
MESSAGE("Vulkan located...")
ELSE()
MESSAGE(FATAL_ERROR "Unable to loacate Vulkan SDK folder!")
ENDIF()

ADD_SUBDIRECTORY(./glfw ./glm)

INCLUDE_DIRECTORIES(${Vulkan_INCLUDE_DIRS} ./glfw/include ./glm/glm)
LINK_DIRECTORIES(${Vulkan_LIBRARY})
ADD_EXECUTABLE (example example.cpp main.cpp)
TARGET_LINK_LIBRARIES(example glfw  ${GLFW_LIBRARIES} ${Vulkan_LIBRARIES})
